# lapin-citadel-test

./: .clang-format  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
example/: config.json  file1.txt  file2.txt
include/: config_reader.h  log_processor.h  log_processor_multithread.h  sensor_multithread.h  sensor_types.h
src/: file_generator.cpp  parser.cpp  parser_multithread.cpp
